# pb_dashboard

./: .gitignore  Makefile
.github/workflows/: main.yml
ansible/: vars.yml
ansible/templates/: default.conf.j2  docker-compose.yml.j2
pb_dashboard/: Dockerfile  __init__.py  app.py  db.py  pyproject.toml  requirements.txt  schemas.py
pb_dashboard/static/: dashboard.css
pb_dashboard/templates/: accounts_data.html  base.html  finance_data_content.html  index.html  site_data_content.html  subscription_data.html  trafic_data.html
pb_db_api/: Dockerfile  Makefile  pyproject.toml  requirements.txt
pb_db_api/alembic/: env.py
pb_db_api/alembic/versions/: 397fe7edcacb_.py  8c037422dc4e_.py  ea42d7078ba8_.py
pb_db_api/pb_db_api/: __init__.py  db.py  main.py  models.py  routes.py  schemas.py
pb_db_api/pb_db_api/local_routes/: balance.py  market.py
pb_db_api/pb_db_api/services/: balance.py  market.py
pb_db_api/tests/: __init__.py
pb_parser/: Makefile  pyproject.toml  requirements.txt
pb_parser/pb_parsers/: __init__.py  browser.py  main.py  parsers.py  renew.py  schemas.py
