[tool.poetry]
name = "pb_dashboard"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
Flask-HTTPAuth = "^4.2.0"
Flask-Bootstrap = "^3.3.7"
clickhouse-driver = "^0.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
ansible = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
